--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
                             <li><a href="#"><span class="glyphicon glyphicon-user"></span> Profile</a></li>
                             <li><a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="glyphicon glyphicon-log-in"></span> Login / Sign Up <span class="caret"></span></a>
                                 <ul class="dropdown-menu">
-                                    <li><a href="/login/index.html">Login</a></li>
-                                    <li><a href="/login/index.html">Sign Up</a></li>
+                                    <li><a href="/index1.html">Login</a></li>
+                                    <li><a href="/index1.html">Sign Up</a></li>
                                 </ul>
                             </li>
                         </ul>
