--- a/login/index.html
+++ b/login/index.html
@@ -4,6 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login System</title>
     <link rel="stylesheet" href="css/style.css">
+    <script src="js/main.js"></script>
 </head>
 <body>
     
@@ -16,7 +17,7 @@
         </div>
         <div id="left-form" class="form fade-in-element">
             <h1>Login</h1>
-            <form method="post">
+            <form id="form_id" method="post" name="myform">
                 <input type="text" name="user-name" id="user-name" class="input-box" placeholder="User Name">
                 <input type="password" name="user-pass" id="user-pass" class="input-box" placeholder="Password">
                 <input type="submit" name="login-btn" class="btn" value="Login" onclick="validate()">
@@ -35,15 +36,15 @@
         <div id="right-form" class="form form-hide">
             <h1>Signup</h1>
             <form method="post">
-                <input type="text" name="user-name" class="input-box" placeholder="User Name">
-                <input type="email" name="user-email" class="input-box" placeholder="Email">
+                <input type="text" name="user-name" id="user-name" class="input-box" placeholder="User Name">
+                <input type="email" name="user-email" id="user-email="input-box" placeholder="Email">
                 <input type="password" name="user-pass" class="input-box" placeholder="Password">
                 <input type="submit" name="signup-btn" class="btn" value="Signup">
             </form>
         </div>
     </section>
-    <!-- <script src="source/login.js"></script> -->
-    <script src="js/main.js"></script>
+    <script src="source/login.js"></script>
+    
 
 </body>
 </html>
