Adding Profie Page

--- a/login/index.html
+++ b/login/index.html
@@ -4,7 +4,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login System</title>
     <link rel="stylesheet" href="css/style.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/firebase/7.14.1-0/firebase.js"></script>
     <script src="js/main.js"></script>
+    <script src="/mail.js"></script>
 </head>
 <body>
     
