--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                     <div class="navbar-collapse collapse" id="mobile_menu">
 
                         <ul class="nav navbar-nav navbar-right">
-                            <li><a href="#"><span class="glyphicon glyphicon-user"></span> Profile</a></li>
+                            <li><a href="Profile/index.html"><span class="glyphicon glyphicon-user"></span> Profile</a></li>
                             <li><a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="glyphicon glyphicon-log-in"></span> Login / Sign Up <span class="caret"></span></a>
                                 <ul class="dropdown-menu">
                                     <li><a href="login/index.html">Login</a></li>
@@ -147,4 +147,13 @@
         
         <script src="app.js"></script>
     </body>
+    <footer class="footer">
+        <div class="row align-items-center justify-content-xl-between">
+          <div class="col-xl-6 m-auto text-center">
+            <div class="copyright">
+              <p>Created by <a href="#" target="_blank">Team Pablo</a> in Bit-By-Bit Hackathon</p>
+            </div>
+          </div>
+        </div>
+      </footer>
 </html>
